# INTEL-AI-PC-LLM

./: .gitignore  README.md
llm-with-openvino/: requirements.txt  test_run.ipynb
llm-with-openvino-2/: check_device.py  main.py  pyproject.toml
