[project]
name = "llm-with-openvino-2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "huggingface-hub>=0.34.4",
    "openvino>=2025.2.0",
    "openvino-genai>=2025.2.0.0",
    "openvino-tokenizers>=2025.2.0.1",
    "optimum-intel[openvino]>=1.15.0",
    "optimum[nncf,openvino]>=1.17.1",
    "transformers>=4.55.2",
]
